low-level-programming/lab2/y.output
Terminals which are not used

   NUMBER


Grammar

    0 $accept: commands $end

    1 commands: /* empty */
    2         | commands command SEMICOLON

    3 command: create_table

    4 create_table: CREATE TABLE IDENTIFIER LPAREN column_defs RPAREN

    5 column_defs: column_def
    6            | column_defs COMMA column_def

    7 column_def: IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
error (256)
CREATE (258) 4
TABLE (259) 4
NUMBER (260)
LPAREN (261) 4
RPAREN (262) 4
COMMA (263) 6
SEMICOLON (264) 2
IDENTIFIER (265) 4 7


Nonterminals, with rules where they appear

$accept (11)
    on left: 0
commands (12)
    on left: 1 2, on right: 0 2
command (13)
    on left: 3, on right: 2
create_table (14)
    on left: 4, on right: 3
column_defs (15)
    on left: 5 6, on right: 4 6
column_def (16)
    on left: 7, on right: 5 6


state 0

    0 $accept: . commands $end

    $default  reduce using rule 1 (commands)

    commands  go to state 1


state 1

    0 $accept: commands . $end
    2 commands: commands . command SEMICOLON

    $end    shift, and go to state 2
    CREATE  shift, and go to state 3

    command       go to state 4
    create_table  go to state 5


state 2

    0 $accept: commands $end .

    $default  accept


state 3

    4 create_table: CREATE . TABLE IDENTIFIER LPAREN column_defs RPAREN

    TABLE  shift, and go to state 6


state 4

    2 commands: commands command . SEMICOLON

    SEMICOLON  shift, and go to state 7


state 5

    3 command: create_table .

    $default  reduce using rule 3 (command)


state 6

    4 create_table: CREATE TABLE . IDENTIFIER LPAREN column_defs RPAREN

    IDENTIFIER  shift, and go to state 8


state 7

    2 commands: commands command SEMICOLON .

    $default  reduce using rule 2 (commands)


state 8

    4 create_table: CREATE TABLE IDENTIFIER . LPAREN column_defs RPAREN

    LPAREN  shift, and go to state 9


state 9

    4 create_table: CREATE TABLE IDENTIFIER LPAREN . column_defs RPAREN

    IDENTIFIER  shift, and go to state 10

    column_defs  go to state 11
    column_def   go to state 12


state 10

    7 column_def: IDENTIFIER .

    $default  reduce using rule 7 (column_def)


state 11

    4 create_table: CREATE TABLE IDENTIFIER LPAREN column_defs . RPAREN
    6 column_defs: column_defs . COMMA column_def

    RPAREN  shift, and go to state 13
    COMMA   shift, and go to state 14


state 12

    5 column_defs: column_def .

    $default  reduce using rule 5 (column_defs)


state 13

    4 create_table: CREATE TABLE IDENTIFIER LPAREN column_defs RPAREN .

    $default  reduce using rule 4 (create_table)


state 14

    6 column_defs: column_defs COMMA . column_def

    IDENTIFIER  shift, and go to state 10

    column_def  go to state 15


state 15

    6 column_defs: column_defs COMMA column_def .

    $default  reduce using rule 6 (column_defs)
